Add comentario to Laboratorio_3

--- a/Laboratorios/laboratorio_3.ipynb
+++ b/Laboratorios/laboratorio_3.ipynb
@@ -9945,7 +9945,7 @@
    },
    "source": [
     "```\n",
-    "Escriba aqui su respuesta\n",
+    "Los estudiantes con padres de mayor nivel educacional se concentran en mayores valores de GPA. Mientras que para menor nivel educacional de los padres, el GPA varía en un rango más amplio, alcanzando valores más bajos y con menos estudiantes en los puntajes altos.\n",
     "```"
    ]
   },
