--- a/Laboratorios/Laboratorio_4.ipynb
+++ b/Laboratorios/Laboratorio_4.ipynb
@@ -18004,6 +18004,12 @@
     "Los siguientes gráficos refuerzan estos hallazgos, pues el distplot con el KDE muestra 3 curvas con formas similares, con una media ligeramente inferior para math score. En cuánto al histograma con gráfico de cajas se puede notar que la tendencia sigue siendo la paridad en todos los test, aún cuando se analizan los datos con una cantidad de 20 bins. La mayor diferencia se encuentra entre las notas 5.25 y 5.74, en donde reading score cuenta con 215 muestras y math score con 174.\n",
     "\n",
     "Finalmente, el histograma con facetas permite visualizar la distribución de los datos obtenidos en forma paralela. En los 3 casos se aprecia que todas las asignaturas cuentan con una distribución similar, siendo consistente con la información entregada por los gráficos anteriores.\n",
+    "\n",
+    "Respecto a qué gráficos mostrar a cada grupo de personas, se estima que entregar un boxplot al rector puede ser útil para entender algunos de los aspectos importantes de cada asignatura mediante un gráfico simple de entender: se puede explicar hasta qué nota se encuentran la mitad de los estudiantes, a partir de qué nota se encuentran los más aventajados, y cuál es la nota de los estudiantes con peor rendimiento. Asimismo, cada outlier en este gráfico indica algún estudiantes que un rendimiento particularmente bajo respecto a sus compañeros, por lo que también es posible entregar información sobre casos críticos.\n",
+    "\n",
+    "A los padres podría ser útil entregarles un histograma con forma de gráfico de barras. De esta forma podrían saber en qué rango se encuentra su hijo o hija, cuántas personas se encuentran en el mismo rango y cómo fue el desempeño respecto a otros grupos. Esto permite saber si el pupilo es aventajado o promedio respecto al resto, y en cierta forma tener una noción de la dificultad de cada evaluación: si muchos estudiantes adquieren calificaciones muy bajas (y asumiendo que los estudiantes que rindieron las evaluaciones provienen de una muestra variada) se podría barajar la hipótesis de evaluaciones muy complicadas, o malos métodos de enseñanza.\n",
+    "\n",
+    "Para un centro de estudios es mucho más útil entregar la información lo más completa posible. De acuerdo a lo que estimen conveniente, podrían querer uno o varios de los gráficos mostrados en este trabajo. Aún así, si se quisiera entregar sólo uno, es preferible mostrar un histograma con KDE (o sólo el histograma), pues así tienen una noción sobre cómo distribuyen las notas en este establecimiento y compararlo con los de otros, permitiendo saber si en particular este establecimiento educacional es atípico o tiene resultados parecidos al de otros.\n",
     "```"
    ]
   },
@@ -21146,7 +21152,14 @@
    },
    "source": [
     "```\n",
-    "Escriba aqui su respuesta\n",
+    "Se debe notar que a priori, los resultados encontrados no pueden ser concluyentes pues no se sabe si existen un sesgo en la obtención de datos, de modo que la muestra aquí presentada podría tener algún sesgo. Por ejemplo, es conocido que algunas universidades apuntan a obtener estudiantes con un perfil socioeconómico parecido, mientras que otras apuestan por la diversidad.\n",
+    "\n",
+    "Dicho lo anterior, se puede establecer algunos patrones. Para una misma etnia, estudiantes con padres con menor nivel educacional tienen una mediana inferior. Los grupos que no siguen este comportamiento son el grupo C, con una mediana de 5.27 cuandos sus padres tienen un nivel \"college\", y una mediana 5.1 para un nivel parental \"postgraduate\"; y el grupo E, que tienen una mediana de 5.42 para padres con nivel \"school\" y 5.39 para padres con nivel \"college\". El mismo comportamiento se puede ver en el primer y tercer cuartil: a mayor nivel de escolaridad, mayor el el valor de esta medida. Dado lo anterior, se puede afirmar que para esta muestra cuando los padres alcanzan un mayor nivel educacional, los alumnos tienden a obtener mejores calificaciones.\n",
+    "\n",
+    "Para padres del mismo nivel educacional, el GPA varía levemente según la etnia. El comportamiento visible en los boxplots es que las medianas y dispersiones tienden a ser similares entre personas con mismo nivel educacional, salvo para el caso de padres con nivel \"postgraduate\", en donde el grupo A tiene los datos más agrupados, y los grupos B y E están más dispersos. En general, se ve que el grupo A tiene valores ligeramente inferiores al resto de los grupos, mientras que el grupo E cuenta con valores ligeramente superiores.\n",
+    "\n",
+    "El gráfico es muy útil para analizar dos variables de manera simple. Al tener agrupados los valores, se puede escoger la perspectiva a analizar dependiendo de la variable que se quiera evaluar. En particular para cada nivel educacional se tienen boxplots comparativos para las etnias, pero al tener cada nivel educativo dichos boxplots, se puede entender el comportamiento entre niveles educacionales y etnias a la vez, tomando como referencia los demás boxplots del gráfico.\n",
+    "\n",
     "```"
    ]
   },
@@ -22382,7 +22395,7 @@
    },
    "source": [
     "```\n",
-    "Escriba aquí su justificación\n",
+    "Dependiendo del tipo de problema presentado, cada uno de los join puede ser más o menos útil que los otros. En este caso, cómo se ne quiere que la base de datos contenga dato corruptos, no se debiese realizar un join que pueda dejar algún registro de un estudiante que no se encuentre en le primer dataser, pues éste ya se encuentre limpio. Por lo mismo, si el dataset ya limpiado se encuentra a la izquierda, el left join corresponde al más útil de todos, pues mantiene todos los estudiantes que no fueron eliminados durante la limpieza, y además si rindieron las otras evaluaciones se les agregará la nota que obtuvieron. Ahora, si estas otras evaluaciones también eran obligatorias, entonces lo mejor es aplicar un inner join, pues con un left join se pueden dejar estudiantes que no rindieron historia o ciencias, lo que no debiese ser posible.\n",
     "```"
    ]
   },
@@ -31322,6 +31335,17 @@
     "    opacity=0.75\n",
     "    )\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "El primer gráfico entrega información sobre cada génreo para cada una de las asignaturas. En matemáticas los hombres adquieren un rendimineto levemente mejor que las mujeres, mientras que en las otras dos asignaturas el resultado se invierte: mejor resultado para las mujeres que los hombres. En ambos géneros, la dispersión de los datos es similar para todos las asignaturas, aunque las mujeres en general tienen una mayor cantidad de outliers. Dado que hasta este punto no se ha realizado un análisis de cantidad de personas por género, no se puede concluir si los outliers se deben a que hay más mujeres que hombres, o a que en general es más frecuente encontrar este tipo de dato en el género femenino.\n",
+    "\n",
+    "El segundo gráfico muestra la distribución del GPA de acuerdo a la preparación previa de cada estudiante. Aquellos que no tuvieron una preparación especial cuentan con métricas más bajas que los estudiantes con una preparación \"completed\". Dado lo anterior, se puede afirmar que en esta universidad, es más factible obtener uan mejor calificación general si se preparan las asignaturas con anterioridad.\n",
+    "```"
    ]
   },
   {
